--- a/RAG_for_hackaton.ipynb
+++ b/RAG_for_hackaton.ipynb
@@ -24,9 +24,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6bzm5-cvjUiN",
-        "outputId": "5c497da1-202e-46b4-f4e9-94a1d18437b2"
+        "outputId": "394afbb3-f979-4ae9-f88c-394be32ebdb8"
       },
-      "execution_count": 1,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -120,9 +120,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eJmwWdl1jZOs",
-        "outputId": "2eae2e2e-540d-4cba-8ace-0ae1d37383f6"
+        "outputId": "45d76085-2878-48ae-92fa-555cb452a4d3"
       },
-      "execution_count": 2,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -177,9 +177,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HGJImtibjdAv",
-        "outputId": "236efd5b-097c-435d-b847-980b19ef8b60"
+        "outputId": "08b52c86-9207-4ccf-a275-d94f3d52941a"
       },
-      "execution_count": 3,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -204,9 +204,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4WpYIQZajjbd",
-        "outputId": "adc10ed4-9f58-4b43-b21b-455fe47801ff"
+        "outputId": "b9aa62e7-e469-4d1a-af7a-bd065894f7f4"
       },
-      "execution_count": 4,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -229,9 +229,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AmXz_JRomP3-",
-        "outputId": "c5f130af-4295-4756-f9a6-a82d6c389e39"
+        "outputId": "7c6169b4-6753-420e-f178-18e96f9fb62f"
       },
-      "execution_count": 5,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -373,6 +373,130 @@
             "Requirement already satisfied: mpmath<1.4,>=1.1.0 in /usr/local/lib/python3.10/dist-packages (from sympy->onnxruntime>=1.14.1->chromadb) (1.3.0)\n",
             "Requirement already satisfied: mdurl~=0.1 in /usr/local/lib/python3.10/dist-packages (from markdown-it-py>=2.2.0->rich>=10.11.0->typer>=0.9.0->chromadb) (0.1.2)\n",
             "Requirement already satisfied: pyasn1<0.7.0,>=0.4.6 in /usr/local/lib/python3.10/dist-packages (from pyasn1-modules>=0.2.1->google-auth>=1.0.1->kubernetes>=28.1.0->chromadb) (0.6.0)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from langchain.embeddings import OpenAIEmbeddings\n",
+        "from langchain.vectorstores import FAISS\n",
+        "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
+        "from langchain.document_loaders import PyPDFLoader\n",
+        "from langchain.chains import RetrievalQA\n",
+        "from langchain.llms import OpenAI\n",
+        "from langchain.prompts import PromptTemplate\n",
+        "\n",
+        "# PDF 로더 생성\n",
+        "loader = PyPDFLoader(\"태깅_AI.pdf\")\n",
+        "\n",
+        "# 텍스트 분할기 생성\n",
+        "text_splitter = RecursiveCharacterTextSplitter.from_tiktoken_encoder(chunk_size=1000, chunk_overlap=0)\n",
+        "\n",
+        "# 임베딩 모델 생성\n",
+        "embeddings = OpenAIEmbeddings(openai_api_key=\"sk-W7af9Xxi1yDIh0s1a4oGTwelYv3Lp4fffmpxSmI0gGT3BlbkFJ7pXwfOtfK2lEwRoOYGW7N1bJNsYMmK0mp3L-dhhuUA\")\n",
+        "\n",
+        "# Vectorstore 생성\n",
+        "documents = loader.load_and_split()\n",
+        "texts = text_splitter.split_documents(documents)\n",
+        "vectorstore = FAISS.from_documents(texts, embeddings)\n",
+        "\n",
+        "# OpenAI 언어 모델 생성\n",
+        "llm = OpenAI(openai_api_key=\"sk-W7af9Xxi1yDIh0s1a4oGTwelYv3Lp4fffmpxSmI0gGT3BlbkFJ7pXwfOtfK2lEwRoOYGW7N1bJNsYMmK0mp3L-dhhuUA\")\n",
+        "\n",
+        "# RetrievalQA 체인 생성\n",
+        "qa_chain = RetrievalQA.from_chain_type(\n",
+        "    llm=llm,  # OpenAI LLM 객체 설정\n",
+        "    retriever=vectorstore.as_retriever(),\n",
+        "    chain_type=\"stuff\"  # chain_type을 'stuff'로 설정. 필요에 따라 조정 가능\n",
+        ")\n",
+        "\n",
+        "# 태그를 추출하기 위한 쿼리 정의 (태그가 포함된 부분을 검색하기 위해 사용)\n",
+        "tag_query = \"태깅_AI.pdf에서 태그 리스트를 추출해줘\"\n",
+        "\n",
+        "# 태그 리스트를 추출\n",
+        "tag_response = qa_chain.run(tag_query)\n",
+        "tags_list = tag_response.splitlines()  # 응답을 줄 단위로 분리하여 태그 리스트로 변환\n",
+        "\n",
+        "# 프롬프트 템플릿 정의\n",
+        "prompt_template = PromptTemplate(\n",
+        "    template=\"\"\"You are an AI system that tags documents based on their content. Given tags in the document, suggest the most relevant tags with their similarity scores.\n",
+        "\n",
+        "    Document: {document}\n",
+        "    Tags List: {tags}\n",
+        "\n",
+        "    Provide the tags in descending order of similarity.\"\"\",\n",
+        "    input_variables=[\"document\", \"tags\"]\n",
+        ")\n",
+        "\n",
+        "# 문서 텍스트 정의\n",
+        "document_text = \"할머니가 버스승차권발급기를 만지지 못하신다\"\n",
+        "\n",
+        "# 첫 번째 쿼리 수행: 태그 추천\n",
+        "query1 = prompt_template.format(document=document_text, tags=\"\\n\".join(tags_list))\n",
+        "response1 = qa_chain.run(query1)\n",
+        "\n",
+        "# 가장 유사한 태그를 JSON 형식으로 출력하기 위한 프롬프트 템플릿 정의\n",
+        "prompt_template2 = PromptTemplate(\n",
+        "    template=\"\"\"Based on the document and tags, output the most similar tag in JSON format.\n",
+        "\n",
+        "    Document: {document}\n",
+        "    Tags List: {tags}\n",
+        "\n",
+        "    Output:\n",
+        "    {{\n",
+        "        \"content\": \"tag\"\n",
+        "    }}\n",
+        "    \"\"\",\n",
+        "    input_variables=[\"document\", \"tags\"]\n",
+        ")\n",
+        "\n",
+        "# 두 번째 쿼리 수행: 가장 유사한 태그를 JSON 형식으로 출력\n",
+        "query2 = prompt_template2.format(document=document_text, tags=\"\\n\".join(tags_list))\n",
+        "response2 = qa_chain.run(query2)\n",
+        "\n",
+        "# 응답 출력\n",
+        "print(\"태그 추천:\", response1)\n",
+        "print(\"가장 유사한 태그:\", response2)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tiVLtFK19U8Y",
+        "outputId": "90bb48bb-8580-4b6e-92fc-0013ae16e863"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.10/dist-packages/langchain_core/_api/deprecation.py:141: LangChainDeprecationWarning: The class `OpenAIEmbeddings` was deprecated in LangChain 0.0.9 and will be removed in 0.3.0. An updated version of the class exists in the langchain-openai package and should be used instead. To use it run `pip install -U langchain-openai` and import as `from langchain_openai import OpenAIEmbeddings`.\n",
+            "  warn_deprecated(\n",
+            "/usr/local/lib/python3.10/dist-packages/langchain_core/_api/deprecation.py:141: LangChainDeprecationWarning: The class `OpenAI` was deprecated in LangChain 0.0.10 and will be removed in 0.3.0. An updated version of the class exists in the langchain-openai package and should be used instead. To use it run `pip install -U langchain-openai` and import as `from langchain_openai import OpenAI`.\n",
+            "  warn_deprecated(\n",
+            "/usr/local/lib/python3.10/dist-packages/langchain_core/_api/deprecation.py:141: LangChainDeprecationWarning: The method `Chain.run` was deprecated in langchain 0.1.0 and will be removed in 0.3.0. Use invoke instead.\n",
+            "  warn_deprecated(\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "태그 추천: \n",
+            "1. 서비스 접근 안내 (0.83)\n",
+            "2. 정보 제공 (0.78)\n",
+            "3. 적응 지원 (0.74)\n",
+            "4. 교통 지원 (0.71)\n",
+            "5. 일상생활 지원 (0.69)\n",
+            "6. 건강 검진 (0.66)\n",
+            "7. 사회적 소통 (0.62)\n",
+            "8. 언어 및 소통 (0.58)\n",
+            "9. 정신 건강 지원 (0.54)\n",
+            "10. 안전 관리 (0.51)\n",
+            "가장 유사한 태그:  \"교통 지원\"\n"
           ]
         }
       ]
