--- a/RAG_for_hackaton.ipynb
+++ b/RAG_for_hackaton.ipynb
@@ -387,7 +387,9 @@
         "from langchain.chains import RetrievalQA\n",
         "from langchain.llms import OpenAI\n",
         "from langchain.prompts import PromptTemplate\n",
+        "import os\n",
         "\n",
+        "my_api_key=os.environ['OPENAI_API_KEY']\n",
         "# PDF 로더 생성\n",
         "loader = PyPDFLoader(\"태깅_AI.pdf\")\n",
         "\n",
@@ -395,7 +397,7 @@
         "text_splitter = RecursiveCharacterTextSplitter.from_tiktoken_encoder(chunk_size=1000, chunk_overlap=0)\n",
         "\n",
         "# 임베딩 모델 생성\n",
-        "embeddings = OpenAIEmbeddings(openai_api_key=\"sk-W7af9Xxi1yDIh0s1a4oGTwelYv3Lp4fffmpxSmI0gGT3BlbkFJ7pXwfOtfK2lEwRoOYGW7N1bJNsYMmK0mp3L-dhhuUA\")\n",
+        "embeddings = OpenAIEmbeddings(openai_api_key=\"OPENAI_API_KEY\")\n",
         "\n",
         "# Vectorstore 생성\n",
         "documents = loader.load_and_split()\n",
@@ -403,7 +405,7 @@
         "vectorstore = FAISS.from_documents(texts, embeddings)\n",
         "\n",
         "# OpenAI 언어 모델 생성\n",
-        "llm = OpenAI(openai_api_key=\"sk-W7af9Xxi1yDIh0s1a4oGTwelYv3Lp4fffmpxSmI0gGT3BlbkFJ7pXwfOtfK2lEwRoOYGW7N1bJNsYMmK0mp3L-dhhuUA\")\n",
+        "llm = OpenAI(openai_api_key=\"OPENAI_API_KEY\")\n",
         "\n",
         "# RetrievalQA 체인 생성\n",
         "qa_chain = RetrievalQA.from_chain_type(\n",
@@ -412,16 +414,9 @@
         "    chain_type=\"stuff\"  # chain_type을 'stuff'로 설정. 필요에 따라 조정 가능\n",
         ")\n",
         "\n",
-        "# 태그를 추출하기 위한 쿼리 정의 (태그가 포함된 부분을 검색하기 위해 사용)\n",
-        "tag_query = \"태깅_AI.pdf에서 태그 리스트를 추출해줘\"\n",
-        "\n",
-        "# 태그 리스트를 추출\n",
-        "tag_response = qa_chain.run(tag_query)\n",
-        "tags_list = tag_response.splitlines()  # 응답을 줄 단위로 분리하여 태그 리스트로 변환\n",
-        "\n",
         "# 프롬프트 템플릿 정의\n",
         "prompt_template = PromptTemplate(\n",
-        "    template=\"\"\"You are an AI system that tags documents based on their content. Given tags in the document, suggest the most relevant tags with their similarity scores.\n",
+        "    template=\"\"\"You are an AI system that tags documents based on their content. Given the document text and a list of tags, suggest the most relevant tags with their similarity scores.\n",
         "\n",
         "    Document: {document}\n",
         "    Tags List: {tags}\n",
@@ -430,30 +425,15 @@
         "    input_variables=[\"document\", \"tags\"]\n",
         ")\n",
         "\n",
-        "# 문서 텍스트 정의\n",
+        "# 쿼리 정의\n",
         "document_text = \"할머니가 버스승차권발급기를 만지지 못하신다\"\n",
+        "tags_list = \"[교통 지원, 의료 상담,사회적 소통,경제 관리,주거 관리, 디지털 교육,신체 건강 관리,일상생활 지원,복지 서비스 안내,법적 문제 상담,운동 및 여가 활동,안전 관리,언어 및 소통,정신 건강 지원,식사 및 영양,건강 검진,정보 제공,키오스크]\"  # 실제 태그 리스트로 대체 필요\n",
         "\n",
         "# 첫 번째 쿼리 수행: 태그 추천\n",
-        "query1 = prompt_template.format(document=document_text, tags=\"\\n\".join(tags_list))\n",
+        "query1 = prompt_template.format(document=document_text, tags=tags_list)\n",
         "response1 = qa_chain.run(query1)\n",
-        "\n",
-        "# 가장 유사한 태그를 JSON 형식으로 출력하기 위한 프롬프트 템플릿 정의\n",
-        "prompt_template2 = PromptTemplate(\n",
-        "    template=\"\"\"Based on the document and tags, output the most similar tag in JSON format.\n",
-        "\n",
-        "    Document: {document}\n",
-        "    Tags List: {tags}\n",
-        "\n",
-        "    Output:\n",
-        "    {{\n",
-        "        \"content\": \"tag\"\n",
-        "    }}\n",
-        "    \"\"\",\n",
-        "    input_variables=[\"document\", \"tags\"]\n",
-        ")\n",
-        "\n",
-        "# 두 번째 쿼리 수행: 가장 유사한 태그를 JSON 형식으로 출력\n",
-        "query2 = prompt_template2.format(document=document_text, tags=\"\\n\".join(tags_list))\n",
+        "document_text2=f\"{response1} 가장 유사도가 높은 태그1개만 출력하라\"\n",
+        "query2 = prompt_template.format(document=document_text2, tags=tags_list)\n",
         "response2 = qa_chain.run(query2)\n",
         "\n",
         "# 응답 출력\n",
@@ -464,39 +444,17 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "tiVLtFK19U8Y",
-        "outputId": "90bb48bb-8580-4b6e-92fc-0013ae16e863"
+        "id": "nvNBzF72_eTR",
+        "outputId": "f1e1b387-cfa0-4626-f4f5-97f322e304c9"
       },
-      "execution_count": 11,
+      "execution_count": 32,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.10/dist-packages/langchain_core/_api/deprecation.py:141: LangChainDeprecationWarning: The class `OpenAIEmbeddings` was deprecated in LangChain 0.0.9 and will be removed in 0.3.0. An updated version of the class exists in the langchain-openai package and should be used instead. To use it run `pip install -U langchain-openai` and import as `from langchain_openai import OpenAIEmbeddings`.\n",
-            "  warn_deprecated(\n",
-            "/usr/local/lib/python3.10/dist-packages/langchain_core/_api/deprecation.py:141: LangChainDeprecationWarning: The class `OpenAI` was deprecated in LangChain 0.0.10 and will be removed in 0.3.0. An updated version of the class exists in the langchain-openai package and should be used instead. To use it run `pip install -U langchain-openai` and import as `from langchain_openai import OpenAI`.\n",
-            "  warn_deprecated(\n",
-            "/usr/local/lib/python3.10/dist-packages/langchain_core/_api/deprecation.py:141: LangChainDeprecationWarning: The method `Chain.run` was deprecated in langchain 0.1.0 and will be removed in 0.3.0. Use invoke instead.\n",
-            "  warn_deprecated(\n"
-          ]
-        },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "태그 추천: \n",
-            "1. 서비스 접근 안내 (0.83)\n",
-            "2. 정보 제공 (0.78)\n",
-            "3. 적응 지원 (0.74)\n",
-            "4. 교통 지원 (0.71)\n",
-            "5. 일상생활 지원 (0.69)\n",
-            "6. 건강 검진 (0.66)\n",
-            "7. 사회적 소통 (0.62)\n",
-            "8. 언어 및 소통 (0.58)\n",
-            "9. 정신 건강 지원 (0.54)\n",
-            "10. 안전 관리 (0.51)\n",
-            "가장 유사한 태그:  \"교통 지원\"\n"
+            "태그 추천:  교통 지원, 신체 건강 관리, 복지 서비스 안내, 주거 관리, 일상생활 지원, 디지털 교육, 사회적 소통, 경제 관리, 정보 제공, 건강 검진, 운동 및 여가 활동, 언어 및 소통, 정신 건강 지원, 식사 및 영양, 안전 관리, 법적 문제 상담, 키오스크, 의료 상담\n",
+            "가장 유사한 태그:  건강 검진 (similarity score: 0.6)\n"
           ]
         }
       ]
